--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -72,7 +72,7 @@
         <button onclick="window.location.reload()" 
                 class="w-full bg-white text-medical-primary hover:bg-gray-100 px-4 py-3 rounded-2xl flex items-center justify-center gap-3 shadow-sm border border-gray-200 active:scale-95 transition-all">
             <i class="ph-bold ph-arrows-clockwise text-lg"></i>
-            <span class="text-xs font-bold uppercase tracking-wide">Cargar Nuevo Caso Clínico</span>
+            <span class="text-xs font-bold uppercase tracking-wide">Cargar Nuevo Caso</span>
         </button>
     </div>
 
@@ -82,7 +82,6 @@
 
     <section class="cura-card p-6 relative overflow-hidden">
         <div class="absolute left-0 top-0 bottom-0 w-1.5 bg-medical-primary"></div>
-        
         <div class="flex items-center gap-5">
             <div class="relative flex-shrink-0">
                 <div class="w-20 h-20 rounded-full bg-gray-100 border-4 border-medical-light overflow-hidden shadow-sm">
@@ -92,7 +91,6 @@
                     --
                 </div>
             </div>
-
             <div class="flex-grow">
                 <h2 id="nombre-completo" class="text-xl font-extrabold text-medical-textDark leading-none mb-2 uppercase tracking-tight"></h2>
                 <div class="space-y-1">
@@ -101,12 +99,10 @@
                 </div>
             </div>
         </div>
-
         <div class="mt-6 pt-5 border-t border-gray-100">
-            <button type="button"
-                class="w-full bg-gradient-to-r from-medical-blueMain to-medical-primary text-white font-bold py-4 px-6 rounded-2xl flex items-center justify-center gap-3 shadow-lg active:scale-95 transition-all">
+            <button class="w-full bg-gradient-to-r from-medical-blueMain to-medical-primary text-white font-bold py-4 px-6 rounded-2xl flex items-center justify-center gap-3 shadow-lg active:scale-95 transition-all">
                 <i class="ph-fill ph-phone-outgoing text-xl"></i>
-                <span class="tracking-wide uppercase text-sm">Llamar Contacto de Emergencia</span>
+                <span class="tracking-wide uppercase text-xs">Llamar Contacto de Emergencia</span>
             </button>
         </div>
     </section>
@@ -141,14 +137,13 @@
 </main>
 
 <footer class="mt-auto bg-white border-t border-gray-100 py-10 px-6">
-    <div class="flex flex-col items-center gap-3 text-center">
-        <img src="https://datos.salud.gob.ar/user_images/logo_nuevo_msal_encabezado%202.jpg" class="h-8 grayscale opacity-50">
-        <p class="text-[10px] font-black text-medical-textGray uppercase tracking-widest">Protocolo de Privacidad Federal · 2026</p>
+    <div class="flex flex-col items-center gap-3 text-center opacity-50">
+        <img src="https://datos.salud.gob.ar/user_images/logo_nuevo_msal_encabezado%202.jpg" class="h-8 grayscale">
+        <p class="text-[10px] font-black text-medical-textGray uppercase tracking-widest">Protocolo Federal C.U.R.A. · 2026</p>
     </div>
 </footer>
 
 <script>
-/* LÓGICA DE RANDOMIZACIÓN AMPLIADA */
 function randInt(min, max){return Math.floor(Math.random()*(max-min+1))+min;}
 function choice(arr){return arr[randInt(0, arr.length-1)];}
 function fechaRandom(){
@@ -164,121 +159,90 @@ function edad(d,m,y){
     return e;
 }
 
-/* LISTAS BASE */
 const nombresM=['Franco','Juan','Lucas','Santiago','Matías','Agustín','Iván','Tomás','Bruno','Ezequiel'];
 const nombresF=['Sofía','Camila','Valentina','Julieta','Martina','Ana','Paula','Rocío','Florencia','Lorena'];
 const apellidos=['Gómez','Rodríguez','Paganini','Fernández','López','Sánchez','Romero','Martínez','García','Argüello'];
 const sangres=['O+','A+','B+','AB+','O-','A-','B-','AB-'];
 const medicos = ["Dr. Fabián Alonso","Dra. Julieta Ruiz","Dr. Mauro Etcheverry","Dra. Florencia Rivas","Dr. Sebastián López","Dra. Ana Beltrán"];
 
-/* CATÁLOGO CLÍNICO VARIADO (Nivel 2 - No Psiquiátrico) */
 const condicionesCatalogo = [
     {titulo:'Diabetes Tipo 1', subt:'Insulino-dependiente', adv:['Riesgo de cetoacidosis','Verificar bomba de insulina'], meds:[['Insulina Asparta','Acción rápida'],['Insulina Glargina','Acción prolongada']]},
     {titulo:'Hipertensión Arterial', subt:'Grado II Crónica', adv:['Controlar T.A. al ingreso','Riesgo de crisis hipertensiva'], meds:[['Enalapril 10 mg','IECA'],['Amlodipina 5 mg','Antagonista Ca']]},
     {titulo:'Asma Bronquial', subt:'Moderada persistente', adv:['Riesgo de broncoespasmo','Controlar saturación O2'], meds:[['Salbutamol 100 mcg','Rescate'],['Fluticasona','Mantenimiento']]},
     {titulo:'Fibrilación Auricular', subt:'En anticoagulación', adv:['RIESGO DE HEMORRAGIA ALTO','Informar anticoagulantes'], meds:[['Rivaroxabán 20 mg','Anticoagulante'],['Bisoprolol 5 mg','Beta-bloqueante']]},
-    {titulo:'Alergia a Penicilina', subt:'Shock anafiláctico previo', adv:['CONTRAINDICADO: Betalactámicos','Administrar adrenalina en shock'], meds:[['Autoinyector Adrenalina','Emergencia'],['Cetirizina 10 mg','Antihistamínico']]},
-    {titulo:'Epilepsia', subt:'Focal con generalización', adv:['Proteger vía aérea en crisis','No introducir objetos en boca'], meds:[['Levetiracetam 500 mg','Anticonvulsivo'],['Fenitoína','Antiepiléptico']]},
-    {titulo:'EPOC', subt:'Enfisematoso', adv:['Monitorizar saturación meta 88-92%','Evitar exceso de oxígeno'], meds:[['Bromuro de Tiotropio','Broncodilatador'],['Budesonida','Corticoide']]},
-    {titulo:'Hipotiroidismo', subt:'Post-tiroidectomía', adv:['Riesgo de coma mixedematoso en trauma severo'], meds:[['Levotiroxina 100 mcg','Hormona T4']]},
-    {titulo:'Insuficiencia Cardíaca', subt:'Fracción de eyección reducida', adv:['Riesgo de edema agudo de pulmón','Controlar balance hídrico'], meds:[['Furosemida 40 mg','Diurético'],['Espironolactona','Diurético K+']]},
-    {titulo:'Gastritis Crónica / reflujo', subt:'Erosiva severa', adv:['Evitar AINES (Aspirina, Ibuprofeno)','Riesgo de hemorragia digestiva'], meds:[['Pantoprazol 40 mg','Antiácido'],['Sucralfato','Protector gástrico']]},
-    {titulo:'Parkinson', subt:'Estadío II', adv:['Rigidez y riesgo de caídas alto','Administrar medicación a horario exacto'], meds:[['Levodopa/Carbidopa','Dopaminérgico'],['Rasagilina','Inhibidor MAO-B']]},
-    {titulo:'Trombosis Venosa Profunda', subt:'Antecedente recurrente', adv:['Controlar signos de TEP (disnea)','Evitar inmovilidad prolongada'], meds:[['Acenocumarol 4 mg','Anticoagulante']]},
-    {titulo:'Artritis Reumatoidea', subt:'En tratamiento biológico', adv:['Inmunosupresión activa','Riesgo de infecciones oportunistas'], meds:[['Metotrexato','Inmunomodulador'],['Ácido Fólico','Suplemento']]}
+    {titulo:'Alergia Penicilina', subt:'Shock anafiláctico previo', adv:['CONTRAINDICADO: Betalactámicos','Administrar adrenalina en shock'], meds:[['Autoinyector Adrenalina','Emergencia'],['Cetirizina 10 mg','Antihistamínico']]},
+    {titulo:'Epilepsia', subt:'Focal estructural', adv:['Proteger vía aérea en crisis','No introducir objetos en boca'], meds:[['Levetiracetam 500 mg','Anticonvulsivo'],['Fenitoína','Antiepiléptico']]},
+    {titulo:'Hipotiroidismo', subt:'Post-tiroidectomía', adv:['Sin advertencias críticas'], meds:[['Levotiroxina 100 mcg','Hormona T4']]},
+    {titulo:'Insuficiencia Cardíaca', subt:'Controlada', adv:['Riesgo de disnea súbita'], meds:[['Furosemida 40 mg','Diurético']]}
 ];
 
 const implantes = [
-    {t:'Placa de Titanio PHILOS', d:'Osteosíntesis húmero derecho', a:'Compatible con RM (verificar teslas).'},
-    {t:'Stent Coronario DES', d:'Arteria Descendente Anterior', a:'Antiagregación activa de por vida.'},
-    {t:'Marcapasos Bicameral', d:'Síncope previo', a:'Evitar campos electromagnéticos fuertes.'},
-    {t:'Prótesis Total de Cadera', d:'Material: Cerámica/Titanio', a:'Cuidado en maniobras de movilización.'},
-    {t:'Válvula Cardíaca Mecánica', d:'Posición Aórtica', a:'Clic audible. Anticoagulación crítica.'},
-    {t:'Bomba de Insulina', d:'Infusión continua subcutánea', a:'No retirar sin supervisión médica.'}
+    {t:'Placa de Titanio PHILOS', d:'Húmero derecho', a:'Compatible con RM.'},
+    {t:'Stent Coronario', d:'Arteria Descendente Anterior', a:'Antiagregación activa.'},
+    {t:'Marcapasos Bicameral', d:'Síncope previo', a:'Evitar campos electromagnéticos.'}
 ];
 
 document.addEventListener("DOMContentLoaded",()=>{
-    /* RELOJ DE ACCESO */
     const ahora = new Date();
     const opciones = { weekday: 'short', day: '2-digit', month: 'short', hour: '2-digit', minute: '2-digit' };
     document.getElementById("hora-acceso").innerText = "ACCESO REGISTRADO: " + ahora.toLocaleDateString('es-AR', opciones).toUpperCase();
+    
+    document.getElementById("random-medico").innerHTML = `${choice(medicos)}<br>M.P.: ${randInt(10000, 99999)}<br>M.N.: ${randInt(100000, 999999)}`;
 
-    /* MÉDICO + MATRÍCULAS */
-    const medico = choice(medicos);
-    document.getElementById("random-medico").innerHTML = `${medico}<br>M.P.: ${randInt(10000, 99999)}<br>M.N.: ${randInt(100000, 999999)}`;
-
-    /* PACIENTE */
     const sexo = Math.random() < 0.5 ? 'M' : 'F';
-    const nombre = sexo === 'M' ? choice(nombresM) : choice(nombresF);
-    const apellido = choice(apellidos);
-    document.getElementById("nombre-completo").textContent = nombre + " " + apellido;
-    document.getElementById("foto-paciente").src = "https://randomuser.me/api/portraits/" + (sexo==='M'?'men/':'women/') + randInt(1,99) + ".jpg";
+    document.getElementById("nombre-completo").textContent = choice(sexo==='M'?nombresM:nombresF) + " " + choice(apellidos);
+    document.getElementById("foto-paciente").src = `https://randomuser.me/api/portraits/${sexo==='M'?'men/':'women/'}${randInt(1,99)}.jpg`;
     document.getElementById("dni").textContent = randInt(15000000,50000000).toLocaleString('es-AR');
     const fn = fechaRandom();
     document.getElementById("fecha-nac").textContent = formatear(fn.d, fn.m, fn.y);
     document.getElementById("edad").textContent = edad(fn.d, fn.m, fn.y);
     document.getElementById("tipo-sangre").textContent = choice(sangres);
 
-    /* CARGA CLÍNICA ALEATORIA (2-3 condiciones) */
-    const numCond = randInt(2, 3);
+    /* --- LÓGICA DE CARGA EQUILIBRADA --- */
+    const numCond = randInt(0, 2); // Ahora puede ser 0, 1 o 2.
     const seleccionadas = [];
     const contCond = document.getElementById("lista-condiciones");
     const advArr = [];
+    const meds = document.getElementById("lista-medicacion");
 
-    while(seleccionadas.length < numCond){
-        const c = choice(condicionesCatalogo);
-        if(!seleccionadas.includes(c)){
-            seleccionadas.push(c);
-            advArr.push(...c.adv);
-            contCond.innerHTML += `
-            <div class="cura-card p-4 flex gap-4">
-                <div class="w-10 h-10 rounded-xl bg-blue-100 text-blue-600 flex items-center justify-center flex-shrink-0">
-                    <i class="ph-fill ph-activity text-xl"></i>
-                </div>
-                <div>
-                    <p class="text-sm font-bold text-medical-textDark">${c.titulo}</p>
-                    <p class="text-[11px] font-medium text-medical-textGray">${c.subt}</p>
-                </div>
-            </div>`;
+    if (numCond === 0) {
+        contCond.innerHTML = `<p class="text-xs text-medical-textGray italic px-2">No se registran condiciones crónicas relevantes.</p>`;
+        meds.innerHTML = `<li class="p-4 text-xs text-medical-textGray italic">Sin medicación reportada.</li>`;
+    } else {
+        while(seleccionadas.length < numCond){
+            const c = choice(condicionesCatalogo);
+            if(!seleccionadas.includes(c)){
+                seleccionadas.push(c);
+                advArr.push(...c.adv);
+                contCond.innerHTML += `
+                <div class="cura-card p-4 flex gap-4">
+                    <div class="w-10 h-10 rounded-xl bg-blue-100 text-blue-600 flex items-center justify-center flex-shrink-0"><i class="ph-fill ph-activity text-xl"></i></div>
+                    <div><p class="text-sm font-bold text-medical-textDark">${c.titulo}</p><p class="text-[11px] font-medium text-medical-textGray">${c.subt}</p></div>
+                </div>`;
+                c.meds.forEach(m => {
+                    meds.innerHTML += `<li class="p-4 flex justify-between items-center"><span class="text-sm font-bold text-medical-primary">${m[0]}</span><span class="text-[10px] font-black bg-gray-100 px-2 py-1 rounded-lg uppercase text-medical-textGray">${m[1]}</span></li>`;
+                });
+            }
         }
     }
 
-    /* IMPLANTE (0 o 1) */
     const contImpl = document.getElementById("lista-implantes");
-    if(Math.random() > 0.3){
+    if(Math.random() > 0.8){ // 20% de probabilidad de implante
         const im = choice(implantes);
         advArr.push(im.a);
-        contImpl.innerHTML = `
-        <div class="cura-card p-4 flex gap-4">
-            <div class="w-10 h-10 rounded-xl bg-indigo-100 text-indigo-600 flex items-center justify-center flex-shrink-0">
-                <i class="ph-fill ph-bone text-xl"></i>
-            </div>
-            <div>
-                <p class="text-sm font-bold text-medical-textDark">${im.t}</p>
-                <p class="text-[11px] font-medium text-medical-textGray">${im.d}</p>
-            </div>
-        </div>`;
+        contImpl.innerHTML = `<div class="cura-card p-4 flex gap-4"><div class="w-10 h-10 rounded-xl bg-indigo-100 text-indigo-600 flex items-center justify-center flex-shrink-0"><i class="ph-fill ph-bone text-xl"></i></div><div><p class="text-sm font-bold text-medical-textDark">${im.t}</p><p class="text-[11px] font-medium text-medical-textGray">${im.d}</p></div></div>`;
     } else {
-        contImpl.innerHTML = `<p class="text-xs text-medical-textGray italic px-2">Sin dispositivos detectados.</p>`;
+        contImpl.innerHTML = `<p class="text-xs text-medical-textGray italic px-2">No se detectan dispositivos internos.</p>`;
     }
 
-    /* ADVERTENCIAS */
     const advC = document.getElementById("lista-advertencias");
-    [...new Set(advArr)].forEach(a => { advC.innerHTML += `<li>• ${a}</li>`; });
-
-    /* MEDICACIÓN */
-    const meds = document.getElementById("lista-medicacion");
-    seleccionadas.forEach(c => {
-        c.meds.forEach(m => {
-            meds.innerHTML += `
-            <li class="p-4 flex justify-between items-center">
-                <span class="text-sm font-bold text-medical-primary">${m[0]}</span>
-                <span class="text-[10px] font-black bg-gray-100 px-2 py-1 rounded-lg uppercase text-medical-textGray">${m[1]}</span>
-            </li>`;
-        });
-    });
+    const unicas = [...new Set(advArr.filter(a => a !== "Sin advertencias críticas"))];
+    if (unicas.length === 0) {
+        advC.innerHTML = `<li>• Sin advertencias de urgencia detectadas.</li>`;
+    } else {
+        unicas.forEach(a => { advC.innerHTML += `<li>• ${a}</li>`; });
+    }
 });
 </script>
-
 </body>
 </html>
