--- a/random/demo-random.html
+++ b/random/demo-random.html
@@ -36,20 +36,16 @@
     </script>
 
     <style>
-        body {
-            -webkit-font-smoothing: antialiased;
-            background-color: #f0f4f8;
-        }
-        .cura-card {
-            background: #ffffff;
-            border-radius: 28px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-            border: 1px solid #e5e7eb;
-        }
+        body { -webkit-font-smoothing: antialiased; background-color: #f0f4f8; }
+        .cura-card { background: #ffffff; border-radius: 28px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); border: 1px solid #e5e7eb; }
+        .popup { position: fixed; top: 80px; left: 50%; transform: translateX(-50%); background: #004E85; color: #fff; padding: 12px 20px; border-radius: 12px; font-size: 12px; font-weight: 600; box-shadow: 0 4px 12px rgba(0,0,0,0.2); opacity: 0; transition: opacity 0.5s; z-index: 100; text-align: center; pointer-events: none; width: 80%; max-width: 300px; }
+        .popup.show { opacity: 1; }
     </style>
 </head>
 
 <body class="min-h-screen flex flex-col pt-24 font-sans">
+
+<div id="popup" class="popup">Protocolo Federal: Datos de salud mental protegidos y segmentados.</div>
 
 <header class="fixed top-0 left-0 w-full bg-medical-primaryDark text-white shadow-lg z-50">
     <div class="max-w-xl mx-auto px-4 py-3 flex items-center justify-between">
@@ -69,8 +65,7 @@
 <main class="w-full max-w-lg mx-auto px-5 py-6 space-y-5">
 
     <div class="pb-2">
-        <button onclick="window.location.reload()" 
-                class="w-full bg-white text-medical-primary hover:bg-gray-100 px-4 py-3 rounded-2xl flex items-center justify-center gap-3 shadow-sm border border-gray-200 active:scale-95 transition-all">
+        <button onclick="window.location.reload()" class="w-full bg-white text-medical-primary hover:bg-gray-100 px-4 py-3 rounded-2xl flex items-center justify-center gap-3 shadow-sm border border-gray-200 active:scale-95 transition-all">
             <i class="ph-bold ph-arrows-clockwise text-lg"></i>
             <span class="text-xs font-bold uppercase tracking-wide">Cargar Nuevo Caso Clínico</span>
         </button>
@@ -87,9 +82,7 @@
                 <div class="w-20 h-20 rounded-full bg-gray-100 border-4 border-medical-light overflow-hidden shadow-sm">
                     <img id="foto-paciente" src="" class="w-full h-full object-cover">
                 </div>
-                <div id="tipo-sangre" class="absolute -bottom-1 -right-1 flex items-center justify-center w-9 h-9 rounded-full bg-medical-blueMain text-white text-[11px] font-black border-2 border-white shadow-md">
-                    --
-                </div>
+                <div id="tipo-sangre" class="absolute -bottom-1 -right-1 flex items-center justify-center w-9 h-9 rounded-full bg-medical-blueMain text-white text-[11px] font-black border-2 border-white shadow-md">--</div>
             </div>
             <div class="flex-grow">
                 <h2 id="nombre-completo" class="text-xl font-extrabold text-medical-textDark leading-none mb-2 uppercase tracking-tight"></h2>
@@ -100,18 +93,16 @@
             </div>
         </div>
         <div class="mt-6 pt-5 border-t border-gray-100">
-            <button class="w-full bg-gradient-to-r from-medical-blueMain to-medical-primary text-white font-bold py-4 px-6 rounded-2xl flex items-center justify-center gap-3 shadow-lg active:scale-95 transition-all">
+            <button class="w-full bg-gradient-to-r from-medical-blueMain to-medical-primary text-white font-bold py-4 px-6 rounded-2xl flex items-center justify-center gap-3 shadow-lg active:scale-95 transition-all uppercase text-xs tracking-widest">
                 <i class="ph-fill ph-phone-outgoing text-xl"></i>
-                <span class="tracking-wide uppercase text-xs">Llamar Contacto de Emergencia</span>
+                Llamar Contacto de Emergencia
             </button>
         </div>
     </section>
 
     <section class="bg-orange-50 border-2 border-orange-100 rounded-[28px] p-6 shadow-sm">
         <div class="flex items-center gap-3 mb-3">
-            <div class="w-8 h-8 bg-orange-500 text-white rounded-full flex items-center justify-center">
-                <i class="ph-fill ph-warning-octagon text-lg"></i>
-            </div>
+            <div class="w-8 h-8 bg-orange-500 text-white rounded-full flex items-center justify-center"><i class="ph-fill ph-warning-octagon text-lg"></i></div>
             <h3 class="text-orange-900 font-black text-xs uppercase tracking-widest">Advertencias Críticas</h3>
         </div>
         <ul id="lista-advertencias" class="text-xs text-orange-900 space-y-2 font-bold leading-relaxed"></ul>
@@ -136,10 +127,10 @@
 
 </main>
 
-<footer class="mt-auto bg-white border-t border-gray-100 py-10 px-6 opacity-50">
+<footer class="mt-auto bg-white border-t border-gray-100 py-10 px-6 opacity-60">
     <div class="flex flex-col items-center gap-3 text-center">
         <img src="https://datos.salud.gob.ar/user_images/logo_nuevo_msal_encabezado%202.jpg" class="h-8 grayscale">
-        <p class="text-[10px] font-black text-medical-textGray uppercase tracking-widest">Protocolo Federal C.U.R.A. · 2026</p>
+        <p class="text-[10px] font-black text-medical-textGray uppercase tracking-widest">Protocolo de Privacidad Federal · 2026</p>
     </div>
 </footer>
 
@@ -165,26 +156,29 @@ const apellidos=['Gómez','Rodríguez','Paganini','Fernández','López','Sánche
 const sangres=['O+','A+','B+','AB+','O-','A-','B-','AB-'];
 const medicos = ["Dr. Fabián Alonso","Dra. Julieta Ruiz","Dr. Mauro Etcheverry","Dra. Florencia Rivas","Dr. Sebastián López","Dra. Ana Beltrán"];
 
-/* CATÁLOGO CLÍNICO (No Psiquiátrico) */
 const condicionesCatalogo = [
     {titulo:'Diabetes Tipo 1', subt:'Insulino-dependiente', adv:['Riesgo de cetoacidosis','Verificar bomba de insulina'], meds:[['Insulina Asparta','Acción rápida'],['Insulina Glargina','Acción prolongada']]},
-    {titulo:'Hipertensión Arterial', subt:'Grado II Crónica', adv:['Controlar T.A. al ingreso'], meds:[['Enalapril 10 mg','IECA'],['Amlodipina 5 mg','Antagonista Ca']]},
-    {titulo:'Asma Bronquial', subt:'Moderada persistente', adv:['Riesgo de broncoespasmo'], meds:[['Salbutamol 100 mcg','Rescate']]},
-    {titulo:'Fibrilación Auricular', subt:'En anticoagulación', adv:['RIESGO DE HEMORRAGIA ALTO'], meds:[['Rivaroxabán 20 mg','Anticoagulante']]},
-    {titulo:'Epilepsia focal', subt:'Crisis convulsivas recurrentes', adv:['Proteger vía aérea en crisis'], meds:[['Levetiracetam 500 mg','Anticonvulsivo']]},
-    {titulo:'Hipotiroidismo', subt:'Primario', adv:[], meds:[['Levotiroxina 100 mcg','Hormona']]},
+    {titulo:'Hipertensión Arterial', subt:'Grado II Crónica', adv:['Controlar T.A. al ingreso','Riesgo de crisis hipertensiva'], meds:[['Enalapril 10 mg','IECA'],['Amlodipina 5 mg','Antagonista Ca']]},
+    {titulo:'Asma Bronquial', subt:'Moderada persistente', adv:['Riesgo de broncoespasmo severo','Controlar saturación O2'], meds:[['Salbutamol 100 mcg','Rescate'],['Fluticasona','Mantenimiento']]},
+    {titulo:'Fibrilación Auricular', subt:'En anticoagulación', adv:['RIESGO DE HEMORRAGIA ALTO','Informar anticoagulantes'], meds:[['Rivaroxabán 20 mg','Anticoagulante'],['Bisoprolol 5 mg','Beta-bloqueante']]},
+    {titulo:'Alergia Penicilina', subt:'Shock anafiláctico previo', adv:['CONTRAINDICADO: Betalactámicos','Administrar adrenalina en shock'], meds:[['Autoinyector Adrenalina','Emergencia'],['Cetirizina 10 mg','Antihistamínico']]},
+    {titulo:'Epilepsia focal', subt:'Crisis convulsivas recurrentes', adv:['Proteger vía aérea en crisis','No introducir objetos en boca'], meds:[['Levetiracetam 500 mg','Anticonvulsivo'],['Fenitoína','Antiepiléptico']]},
+    {titulo:'EPOC Enfisematoso', subt:'Tratamiento crónico', adv:['Monitorizar saturación meta 88-92%','Evitar exceso de oxígeno'], meds:[['Tiotropio','Broncodilatador']]},
+    {titulo:'Insuficiencia Cardíaca', subt:'Controlada', adv:['Riesgo de disnea súbita','Controlar balance hídrico'], meds:[['Furosemida 40 mg','Diurético']]},
+    {titulo:'Gastritis Erosiva', subt:'Antecedente de hemorragia', adv:['Evitar AINES (Aspirina/Ibuprofeno)'], meds:[['Pantoprazol 40 mg','Protector']]},
+    {titulo:'Parkinson Estadío II', subt:'Tratamiento dopaminérgico', adv:['Rigidez y riesgo de caídas alto'], meds:[['Levodopa/Carbidopa','Dopaminérgico']]},
+    {titulo:'Trombosis Venosa', subt:'Antecedente TVP', adv:['Controlar signos de TEP (disnea)'], meds:[['Acenocumarol','Anticoagulante']]},
     {titulo:'Artritis Reumatoidea', subt:'Tratamiento biológico', adv:['Inmunosupresión activa'], meds:[['Metotrexato','Inmunomodulador']]}
 ];
 
-/* NUEVOS IMPLANTES VARIADOS */
 const implantes = [
-    {t:'Bomba de Morfina Intratecal', d:'Dolor crónico oncológico', a:'Bomba de infusión programable. No suspender sin especialista.', icon:'ph-fill ph-pill'},
-    {t:'Válvula DVP (Hidrocefalia)', d:'Derivación Ventrículo-Peritoneal', a:'Sensible a imanes de alta potencia. Riesgo de descalibración.', icon:'ph-fill ph-brain'},
-    {t:'Placa de Titanio PHILOS', d:'Osteosíntesis húmero derecho', a:'Compatible con RM ( Titanio).', icon:'ph-fill ph-bone'},
-    {t:'Marcapasos Bicameral', d:'Bloqueo AV Completo', a:'Evitar campos electromagnéticos fuertes. No realizar RM.', icon:'ph-fill ph-heartbeat'},
-    {t:'Neuroestimulador Medular', d:'Dolor neuropático lumbar', a:'Dispositivo electrónico implantado. Restricciones en RM.', icon:'ph-fill ph-cpu'},
-    {t:'DAI (Desfibrilador)', d:'Prevención muerte súbita', a:'Peligro de descarga involuntaria con bisturí eléctrico.', icon:'ph-fill ph-lightning-bold'},
-    {t:'Prótesis Total de Cadera', d:'Material Cerámica/Titanio', a:'Cuidado en movilización y rotación.', icon:'ph-fill ph-intersect-square'}
+    {t:'Bomba de Morfina', d:'Dolor crónico oncológico', a:'Bomba de infusión programable. No suspender.', icon:'ph-fill ph-pill'},
+    {t:'Válvula Hidrocefalia', d:'Derivación Ventrículo-Peritoneal', a:'Sensible a imanes. Riesgo de descalibración.', icon:'ph-fill ph-brain'},
+    {t:'Placa de Titanio PHILOS', d:'Osteosíntesis húmero derecho', a:'Compatible con RM (Titanio).', icon:'ph-fill ph-bone'},
+    {t:'Marcapasos Bicameral', d:'Síncope previo', a:'Evitar campos electromagnéticos fuertes.', icon:'ph-fill ph-heartbeat'},
+    {t:'Neuroestimulador', d:'Dolor neuropático lumbar', a:'Dispositivo electrónico implantado.', icon:'ph-fill ph-cpu'},
+    {t:'DAI (Desfibrilador)', d:'Prevención muerte súbita', a:'Peligro de descarga con bisturí eléctrico.', icon:'ph-fill ph-lightning-bold'},
+    {t:'Bomba de Insulina', d:'Infusión continua', a:'No retirar sin supervisión médica.', icon:'ph-fill ph-drop'}
 ];
 
 document.addEventListener("DOMContentLoaded",()=>{
@@ -203,8 +197,9 @@ document.addEventListener("DOMContentLoaded",()=>{
     document.getElementById("edad").textContent = edad(fn.d, fn.m, fn.y);
     document.getElementById("tipo-sangre").textContent = choice(sangres);
 
-    /* --- LÓGICA DE EQUILIBRIO --- */
-    let numCond = Math.random() < 0.15 ? 0 : (Math.random() < 0.8 ? 1 : 2);
+    /* --- LÓGICA DE EQUILIBRIO REALISTA --- */
+    const prob = Math.random();
+    let numCond = prob < 0.1 ? 0 : (prob < 0.7 ? 1 : 2); 
     const seleccionadas = [];
     const contCond = document.getElementById("lista-condiciones");
     const advArr = [];
@@ -212,18 +207,14 @@ document.addEventListener("DOMContentLoaded",()=>{
 
     if (numCond === 0) {
         contCond.innerHTML = `<p class="text-xs text-medical-textGray italic px-2">Sin condiciones crónicas reportadas.</p>`;
-        meds.innerHTML = `<li class="p-4 text-xs text-medical-textGray italic">Sin medicación en curso.</li>`;
+        meds.innerHTML = `<li class="p-4 text-xs text-medical-textGray italic">Sin medicación reportada en sistema.</li>`;
     } else {
         while(seleccionadas.length < numCond){
             const c = choice(condicionesCatalogo);
             if(!seleccionadas.includes(c)){
                 seleccionadas.push(c);
                 advArr.push(...c.adv);
-                contCond.innerHTML += `
-                <div class="cura-card p-4 flex gap-4">
-                    <div class="w-10 h-10 rounded-xl bg-blue-100 text-blue-600 flex items-center justify-center flex-shrink-0"><i class="ph-fill ph-activity text-xl"></i></div>
-                    <div><p class="text-sm font-bold text-medical-textDark">${c.titulo}</p><p class="text-[11px] font-medium text-medical-textGray">${c.subt}</p></div>
-                </div>`;
+                contCond.innerHTML += `<div class="cura-card p-4 flex gap-4"><div class="w-10 h-10 rounded-xl bg-blue-100 text-blue-600 flex items-center justify-center flex-shrink-0"><i class="ph-fill ph-activity text-xl"></i></div><div><p class="text-sm font-bold text-medical-textDark">${c.titulo}</p><p class="text-[11px] font-medium text-medical-textGray">${c.subt}</p></div></div>`;
                 c.meds.forEach(m => {
                     meds.innerHTML += `<li class="p-4 flex justify-between items-center"><span class="text-sm font-bold text-medical-primary">${m[0]}</span><span class="text-[10px] font-black bg-gray-100 px-2 py-1 rounded-lg uppercase text-medical-textGray">${m[1]}</span></li>`;
                 });
@@ -231,32 +222,23 @@ document.addEventListener("DOMContentLoaded",()=>{
         }
     }
 
-    /* --- IMPLANTE CON ICONO DINÁMICO --- */
     const contImpl = document.getElementById("lista-implantes");
-    if(Math.random() > 0.55){ // ~45% de probabilidad
+    if(Math.random() < 0.4){ 
         const im = choice(implantes);
         advArr.push(im.a);
-        contImpl.innerHTML = `
-        <div class="cura-card p-4 flex gap-4">
-            <div class="w-10 h-10 rounded-xl bg-indigo-100 text-indigo-600 flex items-center justify-center flex-shrink-0">
-                <i class="${im.icon} text-xl"></i>
-            </div>
-            <div>
-                <p class="text-sm font-bold text-medical-textDark">${im.t}</p>
-                <p class="text-[11px] font-medium text-medical-textGray">${im.d}</p>
-            </div>
-        </div>`;
+        contImpl.innerHTML = `<div class="cura-card p-4 flex gap-4"><div class="w-10 h-10 rounded-xl bg-indigo-100 text-indigo-600 flex items-center justify-center flex-shrink-0"><i class="${im.icon} text-xl"></i></div><div><p class="text-sm font-bold text-medical-textDark">${im.t}</p><p class="text-[11px] font-medium text-medical-textGray">${im.d}</p></div></div>`;
     } else {
-        contImpl.innerHTML = `<p class="text-xs text-medical-textGray italic px-2">No se detectan implantes.</p>`;
+        contImpl.innerHTML = `<p class="text-xs text-medical-textGray italic px-2">No se detectan dispositivos internos.</p>`;
     }
 
     const advC = document.getElementById("lista-advertencias");
     const unicas = [...new Set(advArr)];
-    if (unicas.length === 0) {
-        advC.innerHTML = `<li>• Sin advertencias urgentes.</li>`;
-    } else {
-        unicas.forEach(a => { advC.innerHTML += `<li>• ${a}</li>`; });
-    }
+    if (unicas.length === 0) { advC.innerHTML = `<li>• Sin advertencias críticas detectadas.</li>`; } 
+    else { unicas.forEach(a => { advC.innerHTML += `<li>• ${a}</li>`; }); }
+
+    const popup = document.getElementById("popup");
+    popup.classList.add("show");
+    setTimeout(() => popup.classList.remove("show"), 3500);
 });
 </script>
 </body>
